web/app/themes/vestedworld/assets/styles/pages/_home.scss
// Home page

.home.page {

  .icon-target, .icon-connect, .icon-invest {
    height: 100px; width: 100px;
  }

  .slick-dots {
    margin: 0;
    padding: 0;
    bottom: 40px;
    width: 200px;
    text-align: left;
    left: $mobile-global-padding;
    @include media-md {
      bottom: 40px;
      left: $global-padding;
    }
    li {
    }
  }
  .slide-item {
    overflow: hidden;
    position: relative;
    h3.tab {
      background: $white;
      color: $blue;
    }
    img {
      width: 100%;
      max-width: none;
      min-width: 100%;
      @include media-md {
        top: 50%;
        left: 50%;
        width: auto;
        min-height: 100%;
        position: absolute;
        transform: translate(-50%, -50%);
      }
    }

    .slide-text {
      @include column(12);
      padding: #{$vertical-beat * 4} $mobile-global-padding #{$vertical-beat * 6};
      background: rgba($blue,1);
      color: $white;
      p.headline {
        @extend %smooth;
        margin: 0 0 40px 0;
      }
      @include media-md {
        margin-top: 100px;
        position: relative;
        background: rgba($blue-alt,.85);
        padding: #{$vertical-beat * 6} $global-padding $global-padding;
        p.headline {
          font: 48px/48px $sans;
          margin: -6px 0 64px 0;
        }
        .learn-more-wrap {
          text-align: right;
        }
      }
    }
  }

  // Just the headline slider
  .headlines {
    article {
      .slide-text {
        padding-bottom: #{$vertical-beat * 12};
      }
      @include media-md {
        display: flex;
        min-height: 80vh;
        align-items: flex-end;
        .slide-text {
          padding-bottom: $global-padding;
        }
      }
    }
    .slick-dots {
      bottom: #{$vertical-beat * 4};
    }
  }

  .row {
    background: $blue-dark;
    @include media-md {
      margin-bottom: #{$vertical-beat * 8};
    }
  }

  // What We Do block
  .what-we-do {
    background: $gray-lite;
    @include column(12);
    article {
      margin: 0 $mobile-global-padding;
      padding: #{$vertical-beat * 6} 0 #{$vertical-beat * 6} 0;
      border-top: 1px solid $gray-dark;
      position: relative;
      h2 {
        color: $blue;
      }
      &:first-of-type {
        margin-top: 0;
        border-top: none;
      }
      img {
        opacity: 0;
        position: absolute;
        top: 20px;
        right: 0;
        width: 64px;
        transition: opacity .5s ease-out;
        &.in-view {
          opacity: 1;
        }
      }
    }

    @include media-md {
      padding: #{$vertical-beat * 6} 0 0 0;
      &::before {
        left: 0;
        content: '';
        width: 31px;
        height: 1px;
        bottom: 0;
        position: absolute;
        background: $gray-dark;
      }
      article {
        margin-right: 0;
        border-top: none;
        margin-left: $global-padding;
        border-bottom: 1px solid $gray-dark;
        padding: #{$vertical-beat * 6} #{$column-width * 1 * $num_columns/10} #{$vertical-beat * 8} #{$column-width * 2 * $num_columns/10};
        &:first-of-type {
          border-top: 1px solid $gray-dark;
        }
        img {
          top: 64px;
          right: auto;
          left: 0;
          width: #{$column-width * 1.5 * $num_columns/10};
        }
      }
    }
  }
  // Wrapper for Join & Featured slider
  .home-features {
    @include column(11);
  }
  .join {
    display: none;
    color: $white;
    position: relative;
    background: $brand-primary;
    padding: #{$vertical-beat * 6} $mobile-global-padding #{$vertical-beat * 8};
    @include media-md {
      display: block;
      padding: #{$vertical-beat * 6} $global-padding #{$vertical-beat * 8};
    }

    h2, p, a {
      @extend %smooth;
    }

    &.-mobile {
      color: $gray-dark;
      display: block;
      background: $white;
      .newsletter {
        border-color: $gray-dark;
        input[type=email] {
          color: $gray-dark;
          &::placeholder {
            color: $gray-dark;
          }
        }
        button.submit {
          color: $white;
          background: $gray-dark;
        }
      }
      @include media-md {
        display: none;
      }
    }
    .sign-up-button {
      margin: #{$vertical-beat * 4} 0 0;
      height: 48px;
      width: 100%;
      z-index: 1;
      display: block;
      padding: 0 30px;
      text-decoration: none;
      font: 16px/46px $sans;
      color: $brand-primary;
      border: 1px solid $brand-primary;
      position: relative;
      transition: background .2s ease-out, color .2s ease-out;
      &::after {
        position: absolute;
        right: 0;
        top: 0;
        width: #{$mobile-column-width * 2};
        font-size: 16px;
        background: $brand-primary;
        color: $white;
        content: '>';
        text-align: center;
        line-height: 46px;
        height: 46px;
        border: none;
        transition: width .2s ease-out, padding .2s ease-out;
        @include media-md {
          height: 78px;
          line-height: 78px;
          text-align: right;
          background: $white;
          color: $brand-primary;
          padding: 0 #{$mobile-column-width - 3} 0 0;
          width: #{$column-width * 1 * $num_columns/9};
        }
      }
      @include media-md {
        height: 80px;
        color: $white;
        font: 16px/78px $sans;
        border-color: $white;
        margin: #{$vertical-beat * 8} 0 0;
        &:hover {
          color: $brand-primary;
          &::after {
            z-index: -1;
            width: 100%;
            padding-right: #{$mobile-column-width - 4};
          }
        }
      }
      @include min-screen(960px) {
        font-size: 22px;
      }
      @include min-screen(1195px) {
        font-size: 32px;
      }
    }
  }
  .newsletter {
    margin: #{$vertical-beat * 4} 0 0;
    height: 48px;
    width: 100%;
    border: 1px solid $white;
    position: relative;
    @include media-md {
      height: 80px;
      margin: #{$vertical-beat * 8} 0 0;
    }
    input[type=email] {
      background: none;
      border: none;
      font: 16px/46px $sans;
      padding: 0 30px;
      color: $white;
      outline: none;
      &::placeholder {
        color: $white;
      }
      @include media-md {
        font: 32px/78px $sans;
      }
    }
    button.submit {
      position: absolute;
      right: 0;
      top: 0;
      width: #{$mobile-column-width * 2};
      padding: 0;
      background: $white;
      color: $blue;
      text-align: center;
      line-height: 46px;
      height: 46px;
      border: none;
      @include media-md {
        height: 78px;
        width: #{$column-width * 1 * $num_columns/9};
      }
    }
  }

  .featured {
    color: $white;
    @extend %smooth;
    position: relative;
    background: $blue-dark;

    .tab {
      -webkit-font-smoothing: initial;
    }
    a.learn-more:not(.button):hover {
      color: $white;
    }
    h3 {
      margin-bottom: 0;
    }
    .learn-more-wrap {
      margin-top: #{$vertical-beat * 12};
    }
    .slide-item {
      padding: $mobile-global-padding;
    }
    .slider-featured {
      padding-bottom: 76px;
    }
    .slick-dots {
      position: absolute;
      bottom: 0;
      left: $mobile-global-padding;
      margin: 0;
      padding: 0;
      width: 200px;
      text-align: left;
      bottom: #{$vertical-beat * 4};
    }
    .learn-more.button {
      position: absolute;
      left: auto;
      right: $mobile-global-padding;
      bottom: #{$vertical-beat * 4};
      &:hover {
        color: $blue-dark;
      }
    }

    // Small screens can't fit learn-more button with dots
    @include max-screen(480px) {
      .slider-featured {
        padding-bottom: 116px;
      }
      .slick-dots {
        bottom: #{$vertical-beat * 12};
      }
      .learn-more.button {
        position: absolute;
        right: auto;
        left: $mobile-global-padding;
        bottom: #{$vertical-beat * 4};
      }
    }

    @include media-md {
      .learn-more.button {
      }
      .slick-dots {
        left: $global-padding;
      }
      .slide-item {
        padding: $global-padding;
      }
    }
  }
}

